// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpreadsheetAnalyzer > SpreadsheetAnalyzer: analyzes file sample.csv (text/csv) 1`] = `
{
  "columnCount": 5,
  "columns": [
    "Col 1",
    "Col 2",
    "Col 3",
    "Col 4",
    "Col 5",
  ],
  "data": [
    [
      [
        "1",
        "2",
        "3",
        "4",
        "5",
      ],
      [
        "11",
        "22",
        "33",
        "44",
        "55",
      ],
      [
        "a",
        "b",
        "c",
        "d",
        "e",
      ],
    ],
  ],
  "hasFormulas": false,
  "rowCount": 3,
  "sheetCount": 1,
  "sheets": [
    {
      "columnCount": 5,
      "columns": [
        "Col 1",
        "Col 2",
        "Col 3",
        "Col 4",
        "Col 5",
      ],
      "name": "CSV",
      "rowCount": 3,
    },
  ],
}
`;

exports[`SpreadsheetAnalyzer > SpreadsheetAnalyzer: analyzes file sample.ods (application/vnd.oasis.opendocument.spreadsheet) 1`] = `
{
  "columnCount": 0,
  "columns": [],
  "data": [],
  "hasFormulas": false,
  "rowCount": 0,
  "sheetCount": 0,
  "sheets": [],
}
`;

exports[`SpreadsheetAnalyzer > SpreadsheetAnalyzer: analyzes file sample.xls (application/vnd.ms-excel) 1`] = `
{
  "columnCount": 5,
  "columns": [
    "Col 1",
    "Col 2",
    "Col 3",
    "Col 4",
    "Col 5",
  ],
  "data": [
    [
      [
        "Col 1",
        "Col 2",
        "Col 3",
        "Col 4",
        "Col 5",
      ],
      [
        "1",
        "2",
        "3",
        "4",
        "5",
      ],
      [
        "11",
        "22",
        "33",
        "44",
        "55",
      ],
      [
        "a",
        "b",
        "c",
        "d",
        "e",
      ],
    ],
    [
      [
        "Col 1b",
        "Col 2b",
        "Col 3b",
        "Col 4b",
        "Col 5b",
      ],
      [
        "12",
        "22",
        "32",
        "42",
        "52",
      ],
      [
        "113",
        "223",
        "333",
        "443",
        "553",
      ],
      [
        "a2",
        "b2",
        "c2",
        "d2",
        "e2",
      ],
    ],
    [
      [
        "x",
      ],
      [
        "y",
      ],
      [
        "z",
      ],
      [
        "1",
      ],
    ],
  ],
  "hasFormulas": false,
  "rowCount": 12,
  "sheetCount": 3,
  "sheets": [
    {
      "columnCount": 5,
      "columns": [
        "Col 1",
        "Col 2",
        "Col 3",
        "Col 4",
        "Col 5",
      ],
      "name": "Sheet1",
      "rowCount": 4,
    },
    {
      "columnCount": 5,
      "columns": [
        "Col 1b",
        "Col 2b",
        "Col 3b",
        "Col 4b",
        "Col 5b",
      ],
      "name": "Sheet2",
      "rowCount": 4,
    },
    {
      "columnCount": 1,
      "columns": [
        "x",
      ],
      "name": "Sheet3",
      "rowCount": 4,
    },
  ],
}
`;

exports[`SpreadsheetAnalyzer > SpreadsheetAnalyzer: analyzes file sample.xlsx (application/vnd.openxmlformats-officedocument.spreadsheetml.sheet) 1`] = `
{
  "columnCount": 5,
  "columns": [],
  "data": [
    [
      [
        "Col 1",
        "Col 2",
        "Col 3",
        "Col 4",
        "Col 5",
      ],
      [
        "1",
        "2",
        "3",
        "4",
        "5",
      ],
      [
        "11",
        "22",
        "33",
        "44",
        "55",
      ],
      [
        "a",
        "b",
        "c",
        "d",
        "e",
      ],
    ],
    [
      [
        "Col 1b",
        "Col 2b",
        "Col 3b",
        "Col 4b",
        "Col 5b",
      ],
      [
        "12",
        "22",
        "32",
        "42",
        "52",
      ],
      [
        "113",
        "223",
        "333",
        "443",
        "553",
      ],
      [
        "a2",
        "b2",
        "c2",
        "d2",
        "e2",
      ],
    ],
    [
      [
        "x",
      ],
      [
        "y",
      ],
      [
        "z",
      ],
      [
        "1",
      ],
    ],
  ],
  "hasFormulas": false,
  "rowCount": 12,
  "sheetCount": 3,
  "sheets": [
    {
      "columnCount": 5,
      "columns": [],
      "name": "Sheet1",
      "rowCount": 4,
    },
    {
      "columnCount": 5,
      "columns": [],
      "name": "Sheet2",
      "rowCount": 4,
    },
    {
      "columnCount": 4,
      "columns": [],
      "name": "Sheet3",
      "rowCount": 4,
    },
  ],
}
`;
